syntax = "proto3";

package pb;

option go_package = "./pb";

message ImageRegistry  {
    int64  Rid =1;
    int32  Kind =2;
    uint64 UserId =3;
    string Name =4;
    string Url =5;
    int32  Authentication =6;
    string Username  =7;
    string Password =8;
}

// 获取用户镜像时需携带参数
message getUserImageReq {
    int64 UserId =1;
}
message getUserImageResp {
    repeated ImageRegistry imageRegistry =1;
}

// 获取个人镜像所返回参数
message getMyImageReq {
}
message getMyImageResp {
   repeated ImageRegistry imageRegistry =1;
}



// 获取所有镜像所返回参数
message getAllImageReq {
}
message getAllImageResp {
    repeated ImageRegistry imageRegistry =1;
}

service image {
  rpc getMyImage(getMyImageReq) returns (getMyImageResp);
  rpc getUserImage(getUserImageReq) returns (getUserImageResp);
  rpc getAllImage(getAllImageReq) returns (getAllImageResp);
}